# findlines

./: CMakeLists.txt  data.txt  goodfile.txt
src/: main.cpp
